@@ -1,5 +1,5 @@
 /*
- * # Copyright 2024-2025 NetCracker Technology Corporation
+ * # Copyright 2024-2026 NetCracker Technology Corporation
  * #
  * # Licensed under the Apache License, Version 2.0 (the "License");
  * # you may not use this file except in compliance with the License.
@@ -19,7 +19,7 @@ package org.qubership.atp.dataset.db.migration;
 import java.net.URL;
 import java.net.URLClassLoader;
 import java.nio.file.Path;
-import java.nio.file.Paths;
+import java.sql.SQLException;
 import java.util.HashMap;
 import java.util.Map;
 
@@ -32,6 +32,9 @@ import liquibase.Contexts;
 import liquibase.LabelExpression;
 import liquibase.Liquibase;
 import liquibase.Scope;
+import liquibase.database.Database;
+import liquibase.database.DatabaseConnection;
+import liquibase.exception.LiquibaseException;
 import liquibase.resource.ClassLoaderResourceAccessor;
 import lombok.extern.slf4j.Slf4j;
 
@@ -61,32 +64,69 @@ public class MigrationRunner {
         if (migrationModuleLaunchEnabled) {
             log.info("Migration module launch is Enabled. DB update has been launched.");
             try {
-                Liquibase lb = lbFactory.create("install.xml");
-                if (isTests) {
-                    log.info("drop database because of flag (drop.database.for.tests)");
-                    lb.dropAll();
+                log.info("Liquibase migration: install.xml to be processed...");
+                Liquibase liquibase = null;
+                try {
+                    liquibase = lbFactory.create("install.xml");
+                    if (isTests) {
+                        log.info("drop database because of flag (drop.database.for.tests)");
+                        liquibase.dropAll();
+                    }
+                    liquibase.update(new Contexts(), new LabelExpression());
+                } catch (LiquibaseException | SQLException e) {
+                    throw new RuntimeException("Liquibase migration failed", e);
+                } finally {
+                    closeDatabaseConnection(liquibase);
                 }
-                lb.update(new Contexts(), new LabelExpression());
-                lb.getDatabase().getConnection().close();
-                Path path = Paths.get("atp-dataset-migration/target/scripts");
+
+                Path path = Path.of("atp-dataset-migration/target/scripts");
                 URL[] urls = new URL[]{path.toUri().toURL()};
                 URLClassLoader urlClassLoader = new URLClassLoader(urls);
                 ParentLastClassloader customClassLoader = new ParentLastClassloader(
                         urlClassLoader, sourcePath, jdbcType);
                 Map<String, Object> scopeValues = new HashMap<>();
                 scopeValues.put(Scope.Attr.classLoader.name(), customClassLoader);
-                Scope.child(scopeValues, () -> {
-                    Liquibase liquibase = lbFactory.create("update.xml",
-                            new ClassLoaderResourceAccessor());
-                    liquibase.update(new Contexts(), new LabelExpression());
-                    liquibase.getDatabase().getConnection().close();
-                });
+
+                log.info("Liquibase migration: update.xml to be processed...");
+                try {
+                    Scope.child(scopeValues, () -> {
+                        Liquibase lb = null;
+                        try {
+                            lb = lbFactory.create("update.xml",
+                                    new ClassLoaderResourceAccessor());
+                            lb.update(new Contexts(), new LabelExpression());
+                        } catch (LiquibaseException e) {
+                            throw new RuntimeException("Liquibase migration failed", e);
+                        } finally {
+                            closeDatabaseConnection(lb);
+                        }
+                        return null;
+                    });
+                } catch (Exception e) {
+                    throw new RuntimeException("Liquibase migration: something went wrong", e);
+                }
                 log.info("DB update completed.");
             } catch (Throwable e) {
                 log.error("Migration module launch scripts was failed, Uncaught exception", e);
             }
         } else {
             log.info("Migration module launch is Disabled.");
+        }
+    }
+
+    private void closeDatabaseConnection(Liquibase liquibase) {
+        if (liquibase != null) {
+            try {
+                Database db = liquibase.getDatabase();
+                if (db != null) {
+                    DatabaseConnection connection = db.getConnection();
+                    if (connection != null && !connection.isClosed()) {
+                        connection.close();
+                    }
+                }
+            } catch (LiquibaseException e) {
+                log.error("Failed to close connection", e);
+            }
         }
     }
 }
